--- a/css/base.css
+++ b/css/base.css
@@ -112,7 +112,7 @@ img {
   border: 0;
   -ms-interpolation-mode: bicubic; }
 
-object, embed, video, iframe, picture {
+object, embed, video, picture {
   max-width: 100%;
   height: auto;
   display: block; }
@@ -2493,11 +2493,11 @@ legend + .control-group {
 
 /* #Misc
 ================================================== */
-.callout {
-  background: #ddd;
-  padding: 3%;
-  width: 100%; }
-
+/*.callout{
+	background:#ddd;
+	padding:3%;
+	width:100%;
+}*/
 .link-list {
   width: 100%; }
   .link-list li {
