Reduced number of scripts and HTTP requests

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1725,6 +1725,20 @@ figure {
   margin-bottom: 0;
 }
 
+/* #Videos and Other Media
+================================================== */
+video{
+	width:100%;
+	}
+.vendor{
+	padding:2%;
+	background: #d1eed1;
+	margin-bottom:2em;
+	}
+.unsupported {
+	background:#fddfde;
+}	
+
 /* #Menus
 ================================================== */
 
