--- a/css/base.css
+++ b/css/base.css
@@ -1334,6 +1334,19 @@ figure {
 .large-btns3_on {
   margin-bottom: 0; }
 
+/* #Videos and Other Media
+================================================== */
+video {
+  width: 100%; }
+
+.vendor {
+  padding: 2%;
+  background: #d1eed1;
+  margin-bottom: 2em; }
+
+.unsupported {
+  background: #fddfde; }
+
 /* #Menus
 ================================================== */
 .menu1 {
