--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1,7 +1,7 @@
 /* ============================================================
 Wirefy 
 Author: Chris Da Sie [http://chrisdasie.com]
-Version: 2.0.5
+Version: 2.0.6
 URL:https://github.com/cjdsie/wirefy
 Apache License:v2.0. http://www.apache.org/licenses/LICENSE-2.0
 /* Table of Content
@@ -15,6 +15,7 @@ Apache License:v2.0. http://www.apache.org/licenses/LICENSE-2.0
 	#Links
 	#Lists
 	#Images
+	#Media
 	#Buttons
 	#Tabs
 	#Tables
@@ -1725,6 +1726,20 @@ figure {
   margin-bottom: 0;
 }
 
+/* #Videos and Other Media
+================================================== */
+video{
+	width:100%;
+	}
+.vendor{
+	padding:2%;
+	background: #d1eed1;
+	margin-bottom:2em;
+	}
+.unsupported {
+	background:#fddfde;
+}	
+
 /* #Menus
 ================================================== */
 
@@ -3211,11 +3226,11 @@ legend + .control-group {
 
 /* #Misc
 ================================================== */
-/*.callout{
+.callout{
 	background:#ddd;
 	padding:3%;
 	width:100%;
-}*/
+}
 .link-list{
 	width:100%;
 	li{
