--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -19,7 +19,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
 
 .container {
   margin: 0 auto;
-  padding: 0 auto;
+  padding: 0;
   max-width: 100%;
   width: 80%;
   padding-top: 2%;
