--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- 
-Contact Template
+Sidebar Template
 Author: Chris Da Sie [http://chrisdasie.com]
 Version: 2.0.6
 URL: https://getwirefy.com
@@ -21,7 +21,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  <!-- Basic Page Needs
 ================================================= -->
  <meta charset="utf-8">
- <title>Wirefy | Contact Template</title>
+ <title>Wirefy | Sidebar Template</title>
  <meta name="description" content=""><!-- Why don't we add a brief decription here -->
  <meta name="author" content=""><!-- Are you the creator? Put your name here -->
  
@@ -46,6 +46,7 @@ will help you write and rewrite the SCSS files.
 ================================================= -->
  <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="js/selectivizr-min.js"></script>
+ <script src="js/css3-mediaqueries.js"></script>
  <![endif]-->
 
 
@@ -68,7 +69,7 @@ will help you write and rewrite the SCSS files.
   <!-- This is the header information. You can add things like logos and navigation here. -->
     <header role="banner" class="clearfix">
 	  <div class="logo">
-	    <h1><img src="http://placehold.it/250x100&text=[Contact Logo]"></h1>
+	    <h1><img src="http://placehold.it/250x100&text=[Sidebar Logo]"></h1>
 	  </div>
 	<!-- Navigation. This navigation uses the three line approach for small viewports. Check documentation for other examples -->
 	  <div class="menu-button"></div>
@@ -89,65 +90,38 @@ will help you write and rewrite the SCSS files.
     <div role="main" class="content clearfix">
  	  <section class="row">
 	
+		<!-- Sidebar Container -->
+		<aside class="four columns">
+			<h5>Categories</h5>
+			      <ul class="side-nav">
+			        <li><a href="#">News</a></li>
+			        <li><a href="#">Code</a></li>
+			        <li><a href="#">Design</a></li>
+			        <li><a href="#">Fun</a></li>
+			        <li><a href="#">Weasels</a></li>
+			      </ul>
+
+			      <div class="callout">
+			        <h5>Callout Special</h5>
+			        <p>This is dummy text and is not meant to be read. Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium</p>
+			        <a href="#">Read More <i class="icon-chevron-right"></i></a>
+			      </div>
+		</aside>	
+	
 	  <!-- Main Content Container -->
 	
 		<section class="eleven columns" role="content">
-		  	<h3>Get in Touch!</h3>
-			      <p>We love to hearing from our customers. You can either reach out to us as a whole and one of our awesome team members will get back to you, or if you have a specific question reach out to one of our staff. We love getting email all day <em>all day</em>.</p>
-			
-			<!-- Form -->
-				<form class="bs-docs-example form-horizontal">
-					<div class="control-group">
-				      	<label class="control-label" for="inputName">Name</label>
-				      	<div class="controls">
-				        		<input type="text" id="inputName" placeholder="First &amp; Last Name" class="input-xlarge">
-				      	</div>
-				    </div>
-			    	<div class="control-group">
-				     	<label class="control-label" for="inputEmail">Email</label>
-				     	<div class="controls">
-				       		<input type="text" id="inputEmail" placeholder="Email" class="input-xlarge">
-				     	</div>
-				   	</div>
-				   	<div class="control-group">
-				     	<label class="control-label" for="inputMessage">Message</label>
-				     	<div class="controls">
-				       		<textarea rows="5"></textarea>
-				     	</div>
-				   	</div>
-				   	<div class="control-group">
-				     	<div class="controls">
-				       		<button type="submit" class="btn">Send Message</button>
-				     	</div>
-				   	</div>
-				</form>
-				<!-- End Of Form -->
-			
-		
+		  <div>
+			<h1>Content Title</h1>
+			<h4>Content Subtitle</h4>
+			<p>This is dummy text and is not meant to be read. Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadium. Sic tempus fugit esperanto hiccup estrogen. Glorious baklava ex librus hup hey ad infinitum. Non sequitur condominium facile et geranium incognito. Epsum factorial non deposit quid pro quo hic escorol. Marquee selectus non provisio incongruous feline nolo contendre Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum.</p>
+			<p>This is dummy text and is not meant to be read. Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadium. Sic tempus fugit esperanto hiccup estrogen. Glorious baklava ex librus hup hey ad infinitum. Non sequitur condominium facile et geranium incognito. Epsum factorial non deposit quid pro quo hic escorol. Marquee selectus non provisio incongruous feline nolo contendre Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum.</p>
+
+			<p>This is dummy text and is not meant to be read. Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum. Defacto lingo est igpay atinlay. Marquee selectus non provisio incongruous feline nolo contendre. Gratuitous octopus niacin, sodium glutimate. Quote meon an estimate et non interruptus stadium. Sic tempus fugit esperanto hiccup estrogen. Glorious baklava ex librus hup hey ad infinitum. Non sequitur condominium facile et geranium incognito. Epsum factorial non deposit quid pro quo hic escorol. Marquee selectus non provisio incongruous feline nolo contendre Olypian quarrels et gorilla congolium sic ad nauseum. Souvlaki ignitus carborundum e pluribus unum.</p>
+		  </div>
 		</section>
 		<!-- End Of Main Content -->
 			
-		<!-- Sidebar Container -->
-		<aside class="four columns alt-spacing">
-			<div class="row">
-			<h5>Find Us</h5>
-			      <img src="http://placehold.it/500x250&text=[Map]" />
-				<a href="#">View Map</a>
-				</div>
-				<div class="vcard">
-				<p class="adr">
-				<span class="street-address">Wirefy Address</span><br>
-				<span class="region">Niceville, NL</span><br>
-				<span class="postal-code">A1A 2B2</span><br>
-				<span class="country-name">Canada</span>
-				</p>
-				<p class="tel">+1 (XXX) XXX-XXXX</p>
-				</div>
-				
-				
-
-			      
-		</aside>	
 
  	  </section>
 	  <!-- End Main Content and Sidebar -->
@@ -158,7 +132,7 @@ will help you write and rewrite the SCSS files.
 
 	  <hr>			
       <footer role="contentinfo" class="row">
-	 	<p class="eleven columns">&copy; Copyright Contact Template Wirefy.</p>
+	 	<p class="eleven columns">&copy; Copyright Sidebar Template Wirefy.</p>
 		<div class="five columns">
 			<ul class="link-list">
 			  <li><a href="#">Link 1</a></li>
