--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -68,10 +68,10 @@ will help you write and rewrite the SCSS files.
   <!-- This is the header information. You can add things like logos and navigation here. -->
     <header role="banner" class="clearfix">
 	  <div class="logo">
-	    <h1>Wirefy Gallery</h1>
+	    <h1><img src="http://placehold.it/250x100&text=[Gallery Logo]"></h1>
 	  </div>
 	<!-- Navigation. This navigation uses the four line approach for small viewports. Check documentation for other examples -->
-	  <div class='menu-button'></div>
+	  <div class="menu-button"></div>
 	  <a href="#main" class="skip">Skip navigation</a>
 	  <nav role="navigation" id="nav">
 	    <ul>
