--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- 
-Contact Template
+Introduction Template
 Author: Chris Da Sie [http://chrisdasie.com]
 Version: 2.0.6
 URL: https://getwirefy.com
@@ -21,7 +21,7 @@ Apache License: v2.0. http://www.apache.org/licenses/LICENSE-2.0
  <!-- Basic Page Needs
 ================================================= -->
  <meta charset="utf-8">
- <title>Wirefy | Contact Template</title>
+ <title>Wirefy | Introduction Template</title>
  <meta name="description" content=""><!-- Why don't we add a brief decription here -->
  <meta name="author" content=""><!-- Are you the creator? Put your name here -->
  
@@ -46,6 +46,7 @@ will help you write and rewrite the SCSS files.
 ================================================= -->
  <!--[if (lt IE 9) & (!IEMobile)]>
  <script src="js/selectivizr-min.js"></script>
+ <script src="js/css3-mediaqueries.js"></script>
  <![endif]-->
 
 
@@ -66,14 +67,14 @@ will help you write and rewrite the SCSS files.
   <div class="container clearfix">
 	
   <!-- This is the header information. You can add things like logos and navigation here. -->
-    <header role="banner" class="clearfix">
-	  <div class="logo">
-	    <h1><img src="http://placehold.it/250x100&text=[Contact Logo]"></h1>
+    <header role="banner" class="row">
+	  <div class="logo five columns">
+	    <h1><img src="http://placehold.it/250x100&text=[Introduction Logo]"></h1>
 	  </div>
 	<!-- Navigation. This navigation uses the three line approach for small viewports. Check documentation for other examples -->
 	  <div class="menu-button"></div>
 	  <a href="#main" class="skip">Skip navigation</a>
-	  <nav role="navigation" id="nav">
+	  <nav role="navigation" id="nav" class="six columns">
 	    <ul>
 		  <li class="top-level"><a href="#">Link 1</a></li>
 		  <li class="top-level"><a href="#">Link 2</a></li>
@@ -89,76 +90,87 @@ will help you write and rewrite the SCSS files.
     <div role="main" class="content clearfix">
  	  <section class="row">
 	
-	  <!-- Main Content Container -->
-	
-		<section class="eleven columns" role="content">
-		  	<h3>Get in Touch!</h3>
-			      <p>We love to hearing from our customers. You can either reach out to us as a whole and one of our awesome team members will get back to you, or if you have a specific question reach out to one of our staff. We love getting email all day <em>all day</em>.</p>
-			
-			<!-- Form -->
-				<form class="bs-docs-example form-horizontal">
-					<div class="control-group">
-				      	<label class="control-label" for="inputName">Name</label>
-				      	<div class="controls">
-				        		<input type="text" id="inputName" placeholder="First &amp; Last Name" class="input-xlarge">
-				      	</div>
-				    </div>
-			    	<div class="control-group">
-				     	<label class="control-label" for="inputEmail">Email</label>
-				     	<div class="controls">
-				       		<input type="text" id="inputEmail" placeholder="Email" class="input-xlarge">
-				     	</div>
-				   	</div>
-				   	<div class="control-group">
-				     	<label class="control-label" for="inputMessage">Message</label>
-				     	<div class="controls">
-				       		<textarea rows="5"></textarea>
-				     	</div>
-				   	</div>
-				   	<div class="control-group">
-				     	<div class="controls">
-				       		<button type="submit" class="btn">Send Message</button>
-				     	</div>
-				   	</div>
-				</form>
-				<!-- End Of Form -->
-			
+		<!-- Slideshow using side navigation -->
 		
-		</section>
-		<!-- End Of Main Content -->
+			<div class="rslides_container">
+	 	      <ul class="rslides" id="slider3">
+	 	        <li><img src="http://placehold.it/1200x450&text=[img1]" alt="" /></li>
+	 	        <li><img src="http://placehold.it/1200x450&text=[img2]" alt="" /></li>
+	 	        <li><img src="http://placehold.it/1200x450&text=[img3]" alt="" /></li>
+	 	      </ul> 
+			</div>
 			
-		<!-- Sidebar Container -->
-		<aside class="four columns alt-spacing">
+			<!-- Excerpt Information -->
+			
+			<section class="row">
+				<div class="four columns">
+					<img src="http://placehold.it/400x200&text=[image]" alt="" />
+					<h4>Heading Section 1</h4>
+					<p>I'm a brief description for section 1. If you want to know more you should 
+						click the link below.</p>
+						<p><a href="#">Click Me <i class="icon-chevron-right"></i></a>
+				</div>
+				<div class="four columns">
+					<img src="http://placehold.it/400x200&text=[image]" alt="" />
+					<h4>Heading Section 2</h4>
+					<p>I'm a brief description for section 2. If you want to know more you should 
+						click the link below.</p>
+						<p><a href="#">Click Me <i class="icon-chevron-right"></i></a>
+				</div>	
+				<div class="four columns">
+					<img src="http://placehold.it/400x200&text=[image]" alt="" />
+					<h4>Heading Section 3</h4>
+					<p>I'm a brief description for section 3. If you want to know more you should 
+						click the link below.</p>
+						<p><a href="#">Click Me <i class="icon-chevron-right"></i></a>
+				</div>
+				
+				<div class="four columns">
+					<img src="http://placehold.it/400x200&text=[image]" alt="" />
+					<h4>Heading Section 4</h4>
+					<p>I'm a brief description for section 4. If you want to know more you should 
+						click the link below.</p>
+						<p><a href="#">Click Me <i class="icon-chevron-right"></i></a>
+				</div>
+			</section>
+			
+			
+			<!-- Bottom Section -->
 			<div class="row">
-			<h5>Find Us</h5>
-			      <img src="http://placehold.it/500x250&text=[Map]" />
-				<a href="#">View Map</a>
-				</div>
-				<div class="vcard">
-				<p class="adr">
-				<span class="street-address">Wirefy Address</span><br>
-				<span class="region">Niceville, NL</span><br>
-				<span class="postal-code">A1A 2B2</span><br>
-				<span class="country-name">Canada</span>
-				</p>
-				<p class="tel">+1 (XXX) XXX-XXXX</p>
-				</div>
-				
-				
-
-			      
-		</aside>	
-
+			<!-- Callout Container -->
+				<section class="ten columns">
+					<div class="callout row">
+						<div class="six columns">
+							<h1>Callout Header</h1>
+							<h4>I'm a callout subtitle or description text</h4>
+						</div>
+						<div class="nine columns alt-spacing">
+			    			<p>This is dummy text and is not meant to be read. Epsum factorial non deposit quid pro quo hic escorol. Olypian quarrels et gorilla congolium</p>
+			     			<a href="#">Read More <i class="icon-chevron-right"></i></a>
+						</div>
+					</div>
+				</section>	
+	
+	  		<!-- Get In Touch -->
+	
+				<section class="six columns">
+					<h1>Get in Touch</h1>
+					<hr>
+					<a href="#" class="button large row">Call To Action</a>
+					<a href="#" class="button large row">Call To Action</a>
+				</section>
+		<!-- End Of Get In Touch -->	
+			</div>
  	  </section>
-	  <!-- End Main Content and Sidebar -->
+	  <!-- End of Bottom Section -->
 
    	</div><!-- End Of Content -->
+	
+	
 	<!-- Footer -->
-		
-
 	  <hr>			
       <footer role="contentinfo" class="row">
-	 	<p class="eleven columns">&copy; Copyright Contact Template Wirefy.</p>
+	 	<p class="eleven columns">&copy; Copyright Sidebar Template Wirefy.</p>
 		<div class="five columns">
 			<ul class="link-list">
 			  <li><a href="#">Link 1</a></li>
