--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -814,6 +814,7 @@ header[role="banner"]{
 width:50%;
 float:right;
 margin-top:1%;
+display:block;
 ul{float:right; width:100%;}
 li {
   position: relative;
